--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,15 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://mufeez1.github.io/muffeez/">
+  <meta property="og:url" content="https://anjimashaji.github.io/anjima-portfolio/">
   <meta property="og:title"
     content="Anjima Shaji | Software Engineer | Software Engineer | Software Engineer">
   <meta property="og:description" content="Experienced and motivated software engineer with a dedicated emphasis on problem-solving and achieving objectives. Possessing more than four years of expertise within a product-oriented firm, skilled in team leadership, software architecture design, project administration, and cross-functional cooperation.">
-  <meta property="og:image" content="https://mufeez1.github.io/muffeez/assets/images/preview.png">
+  <meta property="og:image" content="https://anjimashaji.github.io/anjima-portfolio/assets/images/preview.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://mufeez1.github.io/muffeez/">
+  <meta property="twitter:url" content="https://anjimashaji.github.io/anjima-portfolio/">
   <meta property="twitter:title"
     content="Anjima Shaji | Software Engineer | Software Engineer | Software Engineer">
   <meta property="twitter:description" content="Experienced and motivated software engineer with a dedicated emphasis on problem-solving and achieving objectives. Possessing more than four years of expertise within a product-oriented firm, skilled in team leadership, software architecture design, project administration, and cross-functional cooperation.">
