--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <meta property="twitter:title"
     content="Anjima Shaji | Software Engineer | Software Engineer | Software Engineer">
   <meta property="twitter:description" content="Experienced and motivated software engineer with a dedicated emphasis on problem-solving and achieving objectives. Possessing more than four years of expertise within a product-oriented firm, skilled in team leadership, software architecture design, project administration, and cross-functional cooperation.">
-  <meta property="twitter:image" content="https://mufeez1.github.io/anjima/assets/images/preview.png">
+  <meta property="twitter:image" content="https://anjimashaji.github.io/anjima-portfolio/assets/images/preview.png">
 
   <base href="/anjima-portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
