--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   <meta property="twitter:description" content="Experienced and motivated software engineer with a dedicated emphasis on problem-solving and achieving objectives. Possessing more than four years of expertise within a product-oriented firm, skilled in team leadership, software architecture design, project administration, and cross-functional cooperation.">
   <meta property="twitter:image" content="https://anjimashaji.github.io/anjima-portfolio/assets/images/preview.png">
 
-  <base href="/anjima-portfolio">
+  <base href="https://anjimashaji.github.io/anjima-portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
